--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                                 <h5 class="card-title mbr-fonts-style display-5">
                                     <strong>Only free apps</strong></h5>
                                 <p class="mbr-text mbr-fonts-style mb-5 display-4">Fully censored by my mum.</p>
-                                <div class="mbr-section-btn"><a href="https://appstore-c79974.webflow.io/" target="_blank" class="btn btn-warning display-4">Get</a> <a href="https://cloud.unodata.com.br/index.php/s/Bny3Nf7KNzH2ZGH" target="_blank" class="btn btn-warning display-4">Direct Download</a></div>
+                                <div class="mbr-section-btn"><a href="https://appstore-c79974.webflow.io/" target="_blank" class="btn btn-warning display-4">Get</a> <a href="https://cloud.unodata.com.br/index.php/s/Bny3Nf7KNzH2ZGH/download/AppStore.apk" target="_blank" class="btn btn-warning display-4">Direct Download</a></div>
                             </div>
                         </div>
                         <div class="col-12 col-md-5">
