--- a/index.html
+++ b/index.html
@@ -221,7 +221,8 @@
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    Learning GameMakerStudio2 KAPUCP link https://drive.google.com/file/d/1_AL_Hei-6dTLfhQdXctfjXNrbrSMHvDn/view?usp=sharing</p>
+                    Play my game on itch.io</p>
+                <iframe src="https://itch.io/embed/1688675?border_width=0&amp;bg_color=000000&amp;fg_color=ffffff&amp;link_color=ffffff&amp;border_color=333333" width="206" height="165" frameborder="0"><a href="https://michalkap.itch.io/knight-fight">Knight Fight by Michalkap</a></iframe>
             </div>
         </div>
     </div>
